--- a/manifest.json
+++ b/manifest.json
@@ -11,51 +11,51 @@
 	"lang": "es-MX",
 	"icons": [
 		{
-			"src": "./img/logo.png",
+			"src": "./img/logo.PNG",
 			"sizes": "1024x1024",
 			"type": "image/png"
 		},		
 		{
-			"src": "./img/logo.png",
+			"src": "./img/logo.PNG",
 			"sizes": "512x512",
 			"type": "image/png"
 		},		
 		{
-			"src": "./img/logo.png",
+			"src": "./img/logo.PNG",
 			"sizes": "384x384",
 			"type": "image/png"
 		},		
 		{
-			"src": "./img/logo.png",
+			"src": "./img/logo.PNG",
 			"sizes": "256x256",
 			"type": "image/png"
 		},		
 		{
-			"src": "./img/logo.png",
+			"src": "./img/logo.PNG",
 			"sizes": "192x192",
 			"type": "image/png"
 		},		
 		{
-			"src": "./img/logo.png",
+			"src": "./img/logo.PNG",
 			"sizes": "128x128",
 			"type": "image/png"
 		},		
 		{
-			"src": "./img/logo.png",
+			"src": "./img/logo.PNG",
 			"sizes": "96x96",
 			"type": "image/png"
 		},		
 		{
-			"src": "./img/logo.png",
+			"src": "./img/logo.PNG",
 			"sizes": "64x64",
 			"type": "image/png"
 		},		
 		{
-			"src": "./img/logo.png",
+			"src": "./img/logo.PNG",
 			"sizes": "32x32",
 			"type": "image/png"
 		},		{
-			"src": "./img/logo.png",
+			"src": "./img/logo.PNG",
 			"sizes": "16x16",
 			"type": "image/png"
 		}
