--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 	"short_name": "Proyect-JS",
 	"description": "Prueba de aplicación responsive y aplicacion web progresiva de Cristian Martínez",
 	"background_color": "#FFF",
-	"theme_color": "#2ECC71",
+	"theme_color": "#0085CA",
 	"orientation": "portrait",
 	"display": "standalone",
 	"start_url": "./index.html?utm_source=web_app_manifest",
