--- a/manifest.json
+++ b/manifest.json
@@ -5,57 +5,57 @@
 	"background_color": "#FFF",
 	"theme_color": "#0085CA",
 	"orientation": "portrait",
-	"display": "standalone",
+	"display": "fullscreen",
 	"start_url": "./index.html?utm_source=web_app_manifest",
 	"scope": "./",
 	"lang": "es-MX",
 	"icons": [
 		{
-			"src": "./img/logo.PNG",
+			"src": "./img/pjs.PNG",
 			"sizes": "1024x1024",
 			"type": "image/png"
 		},		
 		{
-			"src": "./img/logo.PNG",
+			"src": "./img/pjs.PNG",
 			"sizes": "512x512",
 			"type": "image/png"
 		},		
 		{
-			"src": "./img/logo.PNG",
+			"src": "./img/pjs.PNG",
 			"sizes": "384x384",
 			"type": "image/png"
 		},		
 		{
-			"src": "./img/logo.PNG",
+			"src": "./img/pjs.PNG",
 			"sizes": "256x256",
 			"type": "image/png"
 		},		
 		{
-			"src": "./img/logo.PNG",
+			"src": "./img/pjs.PNG",
 			"sizes": "192x192",
 			"type": "image/png"
 		},		
 		{
-			"src": "./img/logo.PNG",
+			"src": "./img/pjs.PNG",
 			"sizes": "128x128",
 			"type": "image/png"
 		},		
 		{
-			"src": "./img/logo.PNG",
+			"src": "./img/pjs.PNG",
 			"sizes": "96x96",
 			"type": "image/png"
 		},		
 		{
-			"src": "./img/logo.PNG",
+			"src": "./img/pjs.PNG",
 			"sizes": "64x64",
 			"type": "image/png"
 		},		
 		{
-			"src": "./img/logo.PNG",
+			"src": "./img/pjs.PNG",
 			"sizes": "32x32",
 			"type": "image/png"
 		},		{
-			"src": "./img/logo.PNG",
+			"src": "./img/pjs.PNG",
 			"sizes": "16x16",
 			"type": "image/png"
 		}
