--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-	"name": "Proyect-JS",
-	"short_name": "Proyect-JS",
-	"description": "Prueba de aplicación responsive y aplicacion web progresiva de Cristian Martínez",
+	"name": "Learning to code with Tirri",
+	"short_name": "LCT",
+	"description": "Aprende a programar de manera fácil",
 	"background_color": "#FFF",
-	"theme_color": "#0085CA",
+	"theme_color": "#19c0ff",
 	"orientation": "portrait",
 	"display": "standalone",
 	"start_url": "./index.html?utm_source=web_app_manifest",
@@ -11,51 +11,51 @@
 	"lang": "es-MX",
 	"icons": [
 		{
-			"src": "./img/pjs.PNG",
+			"src": "./img/Logo6.PNG",
 			"sizes": "1024x1024",
 			"type": "image/png"
 		},		
 		{
-			"src": "./img/pjs.PNG",
+			"src": "./img/Logo6.PNG",
 			"sizes": "512x512",
 			"type": "image/png"
 		},		
 		{
-			"src": "./img/pjs.PNG",
+			"src": "./img/Logo6.PNG",
 			"sizes": "384x384",
 			"type": "image/png"
 		},		
 		{
-			"src": "./img/pjs.PNG",
+			"src": "./img/Logo6.PNG",
 			"sizes": "256x256",
 			"type": "image/png"
 		},		
 		{
-			"src": "./img/pjs.PNG",
+			"src": "./img/Logo6.PNG",
 			"sizes": "192x192",
 			"type": "image/png"
 		},		
 		{
-			"src": "./img/pjs.PNG",
+			"src": "./img/Logo6.PNG",
 			"sizes": "128x128",
 			"type": "image/png"
 		},		
 		{
-			"src": "./img/pjs.PNG",
+			"src": "./img/Logo6.PNG",
 			"sizes": "96x96",
 			"type": "image/png"
 		},		
 		{
-			"src": "./img/pjs.PNG",
+			"src": "./img/Logo6.PNG",
 			"sizes": "64x64",
 			"type": "image/png"
 		},		
 		{
-			"src": "./img/pjs.PNG",
+			"src": "./img/Logo6.PNG",
 			"sizes": "32x32",
 			"type": "image/png"
 		},		{
-			"src": "./img/pjs.PNG",
+			"src": "./img/Logo6.PNG",
 			"sizes": "16x16",
 			"type": "image/png"
 		}
